# NoSQLite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project_structure_draft.md
dataset/: .gitignore  convert.py
dataset/data_airbnb/: .gitignore
lib/: CMakeLists.txt
src/: auxiliary.cpp  auxiliary.hpp  collection.cpp  collection.hpp  database.cpp  database.hpp  hash_index.cpp  hash_index.hpp  json_parsing.cpp  json_parsing.hpp  main.cpp  nosqlite.cpp  nosqlite.hpp
src/objs/: main.cpp  test
src/objs/data/movies/: movies.json
src/objs/db/: header.json
src/objs/db/movies/: header.json
src/objs/db/movies/11/76/: 66d56b3c5ca1.json
src/objs/db/movies/11/a7/: 9a3f7a1c6127.json
src/objs/db/movies/12/66/: dfe454b8febb.json
src/objs/db/movies/13/3e/: 0c74026a4d51.json
src/objs/db/movies/14/10/: 52d9e909e60a.json
src/objs/db/movies/14/1b/: 155d439928d.json
src/objs/db/movies/14/1c/: e00ac733e86a.json
src/objs/db/movies/14/27/: ce6d869b7807.json
src/objs/db/movies/14/31/: 0e04694ccefb.json
src/objs/db/movies/16/5b/: 700bc5d7289e.json
src/objs/db/movies/19/5f/: 3f916a22eeb0.json
src/objs/db/movies/19/76/: 5c025c9b477.json
src/objs/db/movies/1d/7a/: 84f41560e91b.json
src/objs/db/movies/1e/4d/: 78b7608b83e1.json
src/objs/db/movies/1f/e2/: f4e72b63d536.json
src/objs/db/movies/20/98/: 61457633ac40.json
src/objs/db/movies/21/43/: 656709b324b4.json
src/objs/db/movies/21/79/: 11ba4cc7121e.json
src/objs/db/movies/22/05/: 17e13d3be0c4.json
src/objs/db/movies/23/58/: f82e6d4d1911.json
src/objs/db/movies/24/00/: 0d6fae7d36af.json
src/objs/db/movies/25/28/: 140e8cb6a7c0.json
src/objs/db/movies/26/29/: aef0628ce6dc.json
src/objs/db/movies/26/d0/: 1fddf769fdec.json
src/objs/db/movies/27/02/: 6dc6497c2e21.json
src/objs/db/movies/27/60/: b9eae69ab049.json
src/objs/db/movies/27/66/: a79d44d31938.json
src/objs/db/movies/27/7e/: 966915a73b0b.json
src/objs/db/movies/27/9a/: 8dba714b2c06.json
src/objs/db/movies/28/0a/: 269299e86939.json
src/objs/db/movies/28/26/: d54f8daffd2a.json
src/objs/db/movies/28/3b/: 5f54474f2bc3.json
src/objs/db/movies/2b/55/: 82c48ea02c1f.json
src/objs/db/movies/2b/d4/: 3a03f9a46a61.json
src/objs/db/movies/2d/d9/: 5a4eff257c46.json
src/objs/db/movies/2e/3d/: f85565742097.json
src/objs/db/movies/2e/7f/: 2b81fdffc491.json
src/objs/db/movies/2e/f8/: d113630bb11c.json
src/objs/include/: nosqlite.hpp
(+138 files in other folders)
